2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 445/bsps
	* bsp_specs: Remove -D__embedded__ -Asystem(embedded) from cpp.
	Remove cpp, old_cpp (now unused).

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds.dl: Add FreeBSD sysctl() sections.

2002-12-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* dlentry/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* flashentry/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Added support for -nostdlibs.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* dlentry/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* flashentry/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* startup/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* wrapup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2002-06-14	Joel Sherrill <joel@OARcorp.com>
