@@ -16,5 +16,5 @@ TMPINSTALL_FILES = $(PROJECT_INCLUDE) \
 
 all-local: $(TMPINSTALL_FILES)
 
-include $(top_srcdir)/../../../../../../automake/force-preinstall.am
-include $(top_srcdir)/../../../../../../automake/local.am
+include $(top_srcdir)/../../../../automake/force-preinstall.am
+include $(top_srcdir)/../../../../automake/local.am
