@@ -1,3 +1,12 @@
+2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	Makefile.am: Reflect having moved automake.
+	dlentry/Makefile.am: Reflect having moved automake.
+	flashentry/Makefile.am: Reflect having moved automake.
+	include/Makefile.am: Reflect having moved automake.
+	startup/Makefile.am: Reflect having moved automake.
+	wrapup/Makefile.am: Reflect having moved automake.
+
 2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.
